syntax="proto3";

option go_package = "github.com/ismailozdel/micro/common/proto/stock";

package proto;


service StockService {
    rpc GetStocks(GetStocksRequest) returns (GetStocksResponse);
    rpc GetStock(GetStockRequest) returns (GetStockResponse);
    rpc CreateStock(CreateStockRequest) returns (CreateStockResponse);
}

message Stock {
    string id = 1;
    string symbol = 2;
    string name = 3;
    double price = 4;
}

message GetStocksRequest {
}

message GetStocksResponse {
    repeated Stock stocks = 1;
}

message GetStockRequest {
    string id = 1;
}

message GetStockResponse {
    Stock stock = 1;
}

message CreateStockRequest {
    string symbol = 1;
    string name = 2;
    double price = 3;
}

message CreateStockResponse {
    repeated Stock stock = 1;
}


